# selenium-racing

./: README.md  pyproject.toml
racing/: car.py  css.py  main.py  track.py  util.py  webdriver.py
racing/experiments/: argv.py  colours.py  coord_calibrator.py  coord_filler.py  get_text_only.py  mockar.py  selenium_test.py
tracks/daytona_free/: config.json  full.csv  raw.csv
tracks/daytona_pro/: config.json  full.csv
