[tool.poetry]
name = "selenium-racing"
version = "0.1.0"
description = ""
authors = ["Abu Anubis <github@anubis.email>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
selenium = "^4.22.0"
cffi = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
